--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.1.10",
     "animate.css": "^4.1.1",
     "apexcharts": "^3.27.2",
+    "axios": "^0.24.0",
     "bootstrap": "^4.6.0",
     "classnames": "^2.2.6",
     "eva-icons": "^1.1.3",
@@ -39,8 +40,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts docs",
+    "start": "PORT=3001 react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
